Spacing Issue

--- a/css/references.css
+++ b/css/references.css
@@ -54,7 +54,7 @@
 .container3 {
   font-color: black;
   left: 10px;
-  top: 600px;
+  top: 500px;
 }
 
 .fourthReference {
@@ -74,7 +74,7 @@
 .container4 {
   font-color: black;
   left: 10px;
-  top: 850px;
+  top: 750px;
 }
 
 
